???? 0.9.7

    user visible changes, admin:
    * Fixed a probelm where softlinks would be followed during wtar.
    * Added progress report to fix-symlinks
    * Added progress report to stage2svn

29/4/2014 0.9.6   Shai Shasag <shai@waves.com>


    user visible changes, client:
    * new initial vars defined in main: __USRER_ID__, __GROUP_ID__ record the user and group when instl was called. Useful for usaing in the produced script, when called as sudo, to set permissions to the original owner.
    * New variable from main.yaml: MKDIR_CMD to be able to call from index and mkdir command defined by instl. In this case on Mac MKDIR_CMD expands to mkdir_with_owner.
    * Copy now calls mkdir_with_owner on Mac so to properly set owner and permissions for created folders.
    * Copy scripts on Mac get a function mkdir_with_owner so to properly set owner and permissions for created folders.
    * new method PlatformSpecificHelperBase.mkdir_with_owner defaults to PlatformSpecificHelperBase.mkdir, implemented on Mac to call locally defined mkdir_with_owner.


27/4/2014 0.9.5  Shai Shasag <shai@waves.com>

    user visible changes, client:
    * Improved support for syncing from perforce.
    * Logging of echo messages from batch files by using new variable ECHO_LOG_FILE. (Mac)
    * added --group --owner to rsync commands - should preserve user/group when copying under sudo.

    programmer visible changes:
    * New type of defaults file by repo type, i.e. P4.yaml, URL.yaml. Currently added P4.yaml to defaults folder.
    * New utility function: P4GetPathFromDepotPath to get teh local disk path from p4 depot path.
    * Usage of $(LOCAL_REPO_SOURCES_DIR) instead of $(LOCAL_REPO_SYNC_DIR)/$(SOURCE_PREFIX) - because p4 does not need SOURCE_PREFIX.
    * new variable: ECHO_LOG_FILE. If defined all echos from batch file will be teeed to this file. (Mac).    user visible changes, admin: